infrastructure/k8s/istio/canary-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: canary-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ml-pipeline-canary
spec:
  hosts:
  - "ml-pipeline.footanalytics.io"
  gateways:
  - canary-gateway
  http:
  - route:
    - destination:
        host: ml-pipeline
        subset: stable
      weight: 90
    - destination:
        host: ml-pipeline
        subset: canary
      weight: 10
